# common

./: .gitmodules  CMakeLists.txt  common.h
_unit_test/: CMakeLists.txt  test_parallel.h
animation/: animation.h  physics_animation.h
array/: cubic_semi_lagrangian3.cpp  cubic_semi_lagrangian3.h  semi_lagrangian3.cpp  semi_lagrangian3.h
experimental/: VoxelGrid.h  Voxelizer.cpp  Voxelizer.h  sdf.cpp  sdf.h  voxelizer.cpp  voxelizer.h
geom/: bbox.h  bvh.h  collider.h  collider3.h  field.h  grid.h  grid_legacy.h  surface3.h  triangle_mesh.h
geom/impl/: bvh.cpp  collider.cpp  grid.cpp  grid_legacy.cpp  surface3.cpp  triangle_mesh.cpp
igl/: ray_mesh_intersect.h
math/: array.h  math_ext.h  matrix.h  quaternion-inl.h  quaternion.h  ray.h  size.h  time_integration.h  transform.h  vector.h
math/impl/: quaternion_impl_eigen.h  vector_impl_eigen.h
util/: experimentals.cpp  experimentals.h  intersection_query_engine.h  marching_cubes.cpp  marching_cubes.h  nearest_neighbor_query_engine.h  parallel.h  sdf.cpp  sdf.h  timer.h  voxelizer.cpp  voxelizer.h
util/impl/: parallel_impl_cpp.h  parallel_impl_tbb.h
util/legacy/: sdf.cpp  sdf.h  voxelizer.cpp  voxelizer.h
